--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.16.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
