--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
+    "downloadjs": "^1.4.7",
     "express": "~4.16.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
