--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "nodemon ./bin/www"
   },
   "dependencies": {
+    "airtable": "^0.5.10",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
